--- a/samples/Wasm/Wasm.csproj
+++ b/samples/Wasm/Wasm.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Blazor.Diagrams\Blazor.Diagrams.csproj" />
+    <ProjectReference Include="..\TestComponents\TestComponents.csproj" />
   </ItemGroup>
 
 </Project>
