Make PathGenerators return SvgPath and cache the paths on links

--- a/src/Blazor.Diagrams.Core/Blazor.Diagrams.Core.csproj
+++ b/src/Blazor.Diagrams.Core/Blazor.Diagrams.Core.csproj
@@ -25,4 +25,8 @@
 		</None>
 	</ItemGroup>
 
+	<ItemGroup>
+	  <PackageReference Include="SvgPathProperties" Version="1.1.1" />
+	</ItemGroup>
+
 </Project>
