Update versions and changelog

--- a/src/Blazor.Diagrams/Blazor.Diagrams.csproj
+++ b/src/Blazor.Diagrams/Blazor.Diagrams.csproj
@@ -5,11 +5,11 @@
         <Nullable>enable</Nullable>
         <Authors>zHaytam</Authors>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
-        <AssemblyVersion>2.1.6</AssemblyVersion>
-        <FileVersion>2.1.6</FileVersion>
-        <RepositoryUrl>https://github.com/zHaytam/Blazor.Diagrams</RepositoryUrl>
+        <AssemblyVersion>3.0.0</AssemblyVersion>
+        <FileVersion>3.0.0-beta.1</FileVersion>
+        <RepositoryUrl>https://github.com/Blazor-Diagrams/Blazor.Diagrams</RepositoryUrl>
         <Description>A fully customizable and extensible all-purpose diagrams library for Blazor</Description>
-        <Version>2.1.6</Version>
+        <Version>3.0.0-beta.1</Version>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <PackageTags>blazor diagrams diagramming svg drag</PackageTags>
         <PackageId>Z.Blazor.Diagrams</PackageId>
