--- a/src/Blazor.Diagrams.Core/Blazor.Diagrams.Core.csproj
+++ b/src/Blazor.Diagrams.Core/Blazor.Diagrams.Core.csproj
@@ -7,10 +7,10 @@
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<Authors>zHaytam</Authors>
 		<Description>A fully customizable and extensible all-purpose diagrams library for Blazor</Description>
-		<AssemblyVersion>2.1.6</AssemblyVersion>
-		<FileVersion>2.1.6</FileVersion>
-		<RepositoryUrl>https://github.com/zHaytam/Blazor.Diagrams</RepositoryUrl>
-		<Version>2.1.6</Version>
+		<AssemblyVersion>3.0.0</AssemblyVersion>
+		<FileVersion>3.0.0-beta.1</FileVersion>
+		<RepositoryUrl>https://github.com/Blazor-Diagrams/Blazor.Diagrams</RepositoryUrl>
+		<Version>3.0.0-beta.1</Version>
 		<PackageId>Z.Blazor.Diagrams.Core</PackageId>
 		<PackageTags>blazor diagrams diagramming svg drag</PackageTags>
 		<Product>Z.Blazor.Diagrams.Core</Product>
