--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,6 +2,8 @@ name: Build
 on:
   push:
     branches:
+      - master
+      - develop
       - 3.0.0
   pull_request:
     types: [opened, synchronize, reopened]
