--- a/src/Blazor.Diagrams.Core/Blazor.Diagrams.Core.csproj
+++ b/src/Blazor.Diagrams.Core/Blazor.Diagrams.Core.csproj
@@ -8,9 +8,9 @@
 		<Authors>zHaytam</Authors>
 		<Description>A fully customizable and extensible all-purpose diagrams library for Blazor</Description>
 		<AssemblyVersion>3.0.0</AssemblyVersion>
-		<FileVersion>3.0.0-beta.1</FileVersion>
+		<FileVersion>3.0.0</FileVersion>
 		<RepositoryUrl>https://github.com/Blazor-Diagrams/Blazor.Diagrams</RepositoryUrl>
-		<Version>3.0.0-beta.1</Version>
+		<Version>3.0.0-beta.2</Version>
 		<PackageId>Z.Blazor.Diagrams.Core</PackageId>
 		<PackageTags>blazor diagrams diagramming svg drag</PackageTags>
 		<Product>Z.Blazor.Diagrams.Core</Product>
