--- a/src/Blazor.Diagrams/Blazor.Diagrams.csproj
+++ b/src/Blazor.Diagrams/Blazor.Diagrams.csproj
@@ -16,6 +16,7 @@
         <PackageProjectUrl>https://blazor-diagrams.zhaytam.com/</PackageProjectUrl>
         <Product>Z.Blazor.Diagrams</Product>
         <PackageIcon>ZBD.png</PackageIcon>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
     </PropertyGroup>
 
     <ItemGroup>
@@ -30,7 +31,11 @@
     <ItemGroup>
         <None Include="..\..\ZBD.png">
             <Pack>True</Pack>
-            <PackagePath></PackagePath>
+            <PackagePath>\</PackagePath>
+        </None>
+        <None Include="..\..\README.md">
+            <Pack>True</Pack>
+            <PackagePath>\</PackagePath>
         </None>
     </ItemGroup>
 
