--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Publish app
-      run: cd samples/Wasm && dotnet publish -c Release
+      run: cd site/Site && dotnet publish -c Release
 
     - name: GitHub Pages
       if: success()
