--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -13,15 +13,15 @@ jobs:
   
       - name: Pack Blazor.Diagrams.Core
         working-directory: src/Blazor.Diagrams.Core
-        run: 'dotnet pack --configuration Release --output ${{ env.NUGET_DIR }}'
+        run: 'dotnet pack -p:GeneratePackageOnBuild=false --configuration Release --output ${{ env.NUGET_DIR }}'
 
       - name: Pack Blazor.Diagrams
         working-directory: src/Blazor.Diagrams
-        run: 'dotnet pack --configuration Release --output ${{ env.NUGET_DIR }}'
+        run: 'dotnet pack -p:GeneratePackageOnBuild=false --configuration Release --output ${{ env.NUGET_DIR }}'
 
       - name: Pack Blazor.Diagrams.Algorithms
         working-directory: src/Blazor.Diagrams.Algorithms
-        run: 'dotnet pack --configuration Release --output ${{ env.NUGET_DIR }}'
+        run: 'dotnet pack -p:GeneratePackageOnBuild=false --configuration Release --output ${{ env.NUGET_DIR }}'
 
       - name: Push
         run: |
