upgrade to net8.0

--- a/docs/Layouts/Layouts.csproj
+++ b/docs/Layouts/Layouts.csproj
@@ -1,12 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="GraphShape" Version="1.2.0" />
-    <PackageReference Include="MatBlazor" Version="2.9.0-develop-042" />
+    <PackageReference Include="GraphShape" Version="1.2.1" />
+    <PackageReference Include="MatBlazor" Version="2.10.0" />
   </ItemGroup>
 
   <ItemGroup>
