--- a/docs/Layouts/Layouts.csproj
+++ b/docs/Layouts/Layouts.csproj
@@ -1,12 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-  </PropertyGroup>
-
   <ItemGroup>
-    <PackageReference Include="GraphShape" Version="1.2.1" />
-    <PackageReference Include="MatBlazor" Version="2.10.0" />
+    <PackageReference Include="GraphShape" />
+    <PackageReference Include="MatBlazor" />
   </ItemGroup>
 
   <ItemGroup>
