--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -23,18 +23,10 @@ jobs:
         working-directory: src/Blazor.Diagrams.Algorithms
         run: 'dotnet pack -p:GeneratePackageOnBuild=false --configuration Release --output ${{ env.NUGET_DIR }}'
 
-      - name: Test
+      - name: Push
         run: >-
           for i in $(find ${{ env.NUGET_DIR }} -type f -name "*.nupkg");
           do
            echo "File: ${i} \n";
+           dotnet nuget push $i --api-key "${{ secrets.NUGET_API_KEY }}" --source https://api.nuget.org/v3/index.json --skip-duplicate
           done
-
-      - name: Push Blazor.Diagrams.Core
-        run: 'dotnet nuget push ${{ env.NUGET_DIR }}/Z.Blazor.Diagrams.Core.3.0.1.nupkg --api-key "${{ secrets.NUGET_API_KEY }}" --source https://api.nuget.org/v3/index.json --skip-duplicate'
-
-      - name: Push Blazor.Diagrams
-        run: 'dotnet nuget push ${{ env.NUGET_DIR }}/Z.Blazor.Diagrams.3.0.1.nupkg --api-key "${{ secrets.NUGET_API_KEY }}" --source https://api.nuget.org/v3/index.json --skip-duplicate'
-
-      - name: Push Blazor.Diagrams.Algorithms
-        run: 'dotnet nuget push ${{ env.NUGET_DIR }}/Z.Blazor.Diagrams.Algorithms.3.0.1.nupkg --api-key "${{ secrets.NUGET_API_KEY }}" --source https://api.nuget.org/v3/index.json --skip-duplicate'
