Fix Release Action - *.nupkg version not being updated (#36)
* move version props import

* update build props

--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -5,4 +5,6 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
   </PropertyGroup>
+
+  <Import Project="..\build\Version.props" />
 </Project>
