--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,15 +33,21 @@ jobs:
       - name: Build
         run: dotnet build --configuration Release
 
-      - name: Pack
-        run: dotnet nuget pack
+      - name: Pack Blazor.Diagrams.Core
+        working-directory: src/Blazor.Diagrams.Core
+        run: 'dotnet pack -p:GeneratePackageOnBuild=false --configuration Release --output ${{ env.NUGET_DIR }}'
 
-      - name: Create NuGet Packages
-        run: dotnet pack src --configuration Release
+      - name: Pack Blazor.Diagrams
+        working-directory: src/Blazor.Diagrams
+        run: 'dotnet pack -p:GeneratePackageOnBuild=false --configuration Release --output ${{ env.NUGET_DIR }}'
 
-      - name: Upload packages
-        uses: actions/upload-artifact@v3
-        with:
-          name: package
-          path: /home/runner/work/Blazor.Diagrams/Blazor.Diagrams/src/Blazor.Diagrams/bin/Release/*.nupkg
-          retention-days: 5
+      - name: Pack Blazor.Diagrams.Algorithms
+        working-directory: src/Blazor.Diagrams.Algorithms
+        run: 'dotnet pack -p:GeneratePackageOnBuild=false --configuration Release --output ${{ env.NUGET_DIR }}'
+
+      - name: Push
+        run: >-
+          for i in $(find ${{ env.NUGET_DIR }} -type f -name "*.nupkg");
+          do
+           echo "File: ${i} \n";
+          done
