--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,7 +5,7 @@ on:
   push:
     branches: [ master, VFL/WI00764279/NCN-Diagrams-Move-WTG.Blazor.Diagrams-to-nuget.org ]
     tags:
-      - "*"
+      - "v*"
   workflow_dispatch:
 
 env:
@@ -19,6 +19,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+
+      - name: Get Version
+        id: version
+        uses: battila7/get-version-action@v2
 
       - name: Setup dotnet
         uses: actions/setup-dotnet@v3
@@ -35,7 +39,7 @@ jobs:
 
       - name: Pack Blazor.Diagrams
         working-directory: src/Blazor.Diagrams
-        run: 'dotnet pack -p:GeneratePackageOnBuild=false --configuration Release --output ${{ env.NUGET_DIR }}'
+        run: 'dotnet pack -p:GeneratePackageOnBuild=false --configuration Release -p:PackageVersion=${{ steps.version.outputs.version-without-v }} --output ${{ env.NUGET_DIR }}'
 
       - name: Push
         run: >-
